# live-bib-tracking-leaderboard

./: admin-script.js  admin-style.css  arch_diagram.drawio  build_and_run.sh  build_and_run_live.sh  build_and_run_web_stream.sh  docker-compose.yml  index.html  local_server.py  pyproject.toml  run_live_native.sh  script.js  start-dev.sh  style.css  tailwind.config.ts  viewer.html
admin-ui/: admin-script.js  admin-style.css  admin.html
config/: custom_tracker.yaml  yolo_config.yaml
docker/: .dockerignore  DOCKER_DISPLAY_README.md  DOCKER_README.md  Dockerfile  entrypoint.sh
leaderboard-ui/: index.html  script.js  style.css
src/: convert_labelme_to_yolo.py  data_augmentation.py  index.css  organize_labels.py  train.py
src/api_backend/: local_server.py
src/components/: DataTable.tsx  IconButton.tsx  StatusChip.tsx
src/frontend/: .env  Dockerfile  README.md  index.html  vite.config.ts
src/frontend/src/components/: Layout.tsx  RaceClock.tsx
src/frontend/src/pages/: AdminDashboard.tsx  Index.tsx
src/image_processor/: dataloader.py  direct_connect_phone.md  extract_images.py  utils.py  video_inference.py
src/image_processor/live_bib_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lib/: utils.ts
src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Index.tsx
