# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "live-bib-tracking"
version = "0.1.0"
description = "A project for racer bib identification, reading and tracking"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.0",
    "pandas==2.3.0",
    "PyYAML==6.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "statsmodels==0.14.4",
    "torch==2.7.1",
    "torch-geometric==2.6.1",
    "tqdm==4.67.1",
    "wandb==0.21.0",
    "xgboost==3.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
